Alterar o cadastro de produtos e adicionar o CRUD de imagens do mesmo